	DST rules as the 2030's (rather than the 1970s), and dates
	prior to 1902 are assumed to have no DST and the same offset
	as in 1902 (if known, otherwise as in the 1970s).

    o	On platforms where we can detect that mktime sets errno
	(e.g. Solaris but not glibc), "1969-12-31 23:59:59" is
	converted to POSIXct as -1 and not NA.

    o	spline() gets an 'xout' argument, analogously to approx().


DEPRECATED & DEFUNCT

    o	In package installation, SaveImage: yes is defunct and
	lazyloading is attempted instead.

    o	$ on an atomic vector or S4 object is now defunct.

    o	Partial matching in [[ is now only performed if explicitly
	requested (by exact=FALSE or exact=NA).

    o	Command-line completion has been moved from package 'rcompgen'
	to package 'utils': the former no longer exists as a separate
	package in the R distribution.

    o	The S4 pseudo-class "single" has been removed.
	["double" will follow shortly:  the S4 class for a REALSXP is
	"numeric".]


INSTALLATION

    o	Tcl/Tk >= 8.3 (released in 2000) is now required to build
	package tcltk.

    o	The Windows build only supports Windows 2000 or later (XP,
	Vista, Server 2003 and Server 2008).

    o	New option --enable-R-static-lib installs libR.a which can
	be linked to a front-end via 'R CMD config --ldflags'.
	The tests/Embedding examples now work with a static R
	library.

    o	Netscape (which was discontinued in Feb 2008) is no longer
	considered when selecting a browser.


UTILITIES

    o	Rdconv now removes empty sections including alias and keyword
    	entries, with a note.

    o	Keyword entries are no longer mandatory in Rd files.

    o	R CMD check now warns if spaces or non-ASCII characters are
	used in file paths, since these are not in general portable.

    o   R CMD INSTALL now also installs tangled versions of all vignettes.

    o	R CMD check (via massage-examples.pl) now checks all examples
	with a 7 inch square device region on A4 paper, for